# testplugin_pi

./: .clang-format  .gitignore  .travis.yml  .travis.yml.save-20200317  CMakeLists.older.txt  CMakeLists.txt  Frontend2.md  README-BUILD.md  README.md  Testplugin-CI-Cmake-v1.0.160.txt  appveyor.yml  bld.bat  build-local-package-example.sh  build-win.sh  run-circleci-local.txt  submod-up.bat  tp-copy.bat  update_submodule_branch.sh
.circleci/: config-original.yml  config.yml
BATCH/: build-win simple.sh  mod-addnew.bat  mod-rm+add.bat  mod-update.bat  submod-up.bat  tp-copy.bat
BATCH/OLD/: fe2xcopy.bat  gitadd.bat  tp-add.bat
Forms/: tpControlDialog.fbp  tpControlDialogDef.cpp  tpControlDialogDef.h
buildosx/InstallOSX/: testplugin_pi.pkgproj.in
ci/: appveyor-upload.sh  circleci-build-android-arm64.sh  circleci-build-android-armhf.sh  circleci-build-debian.sh  circleci-build-flatpak.sh  circleci-build-macos-new.sh  circleci-build-macos-universal.sh  circleci-build-macos.sh  circleci-build-mingw.sh  circleci-build-msvc.bat  circleci-build-raspbian-armhf.sh  circleci-build-trusty.sh  circleci-build-ubuntu-docker.sh  circleci-upload.sh  cloudsmith-upload.sh  control  docker-build-flatpak.sh  travis-build-flatpak.sh  travis-build-osx.sh  travis-build-raspbian-armhf-part1.sh  travis-build-raspbian-armhf-part2.sh  travis-build-raspbian-armhf.sh  travis-upload.sh
cmake/: PluginConfigure.cmake  PluginInstall.cmake  PluginLocalization.cmake  PluginPackage.cmake  PluginSetup.cmake  appveyor-upload.sh.in  changelog.in  circleci-upload.sh.in  fix-macos-libs.sh  org.opencpn.OpenCPN.Plugin.yaml.in  testplugin-plugin.xml.in
cmake/in-files/: appveyor-upload.sh.in  circleci-upload.sh.in  cloudsmith-upload-android.sh.in  cloudsmith-upload.sh.in  flatpak_args.in  flatpak_extra_modules.in  flatpak_options.in  org.opencpn.OpenCPN.Plugin.yaml.in  pkg_version.sh.in  plugin.xml.in  testplugin-plugin.xml.in  travis-upload.sh.in  version.h.in  wxWTranslateCatalog.h.in
debian/: changelog  control
include/: crowdsource_pi.h  globals.h  testplugin_pi.h  tpControlDialogDef.h  tpControlDialogImpl.h  tpJSON.h  tpdc.h  tpicons.h  winapifamily.h
msvc/: ShipDriver.clone.bat  ShipDriver.without.clone.bat  win_deps.bat
ocpninclude/: ocpn_plugin.h
po/: POTFILES.in  ar_SA.po  bg_BG.po  ca_ES.po  crowdsource_pi.pot  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  testplugin_pi.pot  th_TH.po  tr_TR.po  vi_VN.po  zh_CN.po  zh_TW.po
src/: crowdsource_pi.cpp  testplugin_pi.cpp  tpControlDialogDef.cpp  tpControlDialogImpl.cpp  tpJSON.cpp  tpShaders.cpp  tpUtils.cpp  tpdc.cpp  tpicons.cpp
